@@ -4,7 +4,7 @@
         name="guessnumber"
         type="python:guessnumber"
         section="/"
-        icon="boardicons/python.png"
+        icon="boardicons/guessnumber.png"
         difficulty="0"
         author="Clement Coudoin (clement.coudoin@free.fr)"
         boarddir="">
