@@ -1,5 +1,13 @@
 2005-10-16  Bruno coudoin  <bruno.coudoin@free.fr>
 
+	- Completed the guessnumber activity, including artwork
+	
+	* boards/images/cave.png:
+	* src/boards/boaricons/guessnumber.png:
+	* src/boards/python/guessnumber.py:
+
+2005-10-16  Bruno coudoin  <bruno.coudoin@free.fr>
+
 	- Fixed non translated string in chronos.
 	  (strings in xml with preverve must not use \n)
 	- Added a new icon for the gnumch game by Franck Doucet.
